# stringplus

./: .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  commitlint.config.js  package-lock.json  package.json
docs/: Doxyfile.in  c-oop-coding-standard.md
docs/superpowers/plans/: 2026-05-21-docgen.md  2026-05-21-linter-and-tests.md  2026-05-22-changelog.md  2026-05-23-ccary-refactor.md  2026-05-23-doxygen-warning.md  2026-05-23-object-oop.md  2026-05-23-test-framework-migration-plan.md
docs/superpowers/specs/: 2026-05-21-docgen-design.md  2026-05-21-linter-and-tests-design.md  2026-05-22-changelog-design.md  2026-05-23-ccary-refactor-design.md  2026-05-23-doxygen-warning-design.md  2026-05-23-object-oop-design.md  2026-05-23-test-framework-migration-design.md
include/: ccary.h  obj_class.h  object.h  stringplus.h
src/: ccary.c  main.c  object.c  stringplus.c
tests/: CMakeLists.txt  test_ccary.c  test_object.c  test_stringplus.c  test_utils.h
